--- a/package.json
+++ b/package.json
@@ -12,32 +12,58 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.7",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
+    "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "expo": "~42.0.1",
     "expo-asset": "~8.3.2",
+    "expo-av": "~9.2.3",
+    "expo-barcode-scanner": "~10.2.2",
+    "expo-clipboard": "~1.1.0",
     "expo-constants": "~11.0.1",
+    "expo-crypto": "~9.2.0",
+    "expo-file-system": "~11.1.3",
     "expo-font": "~9.2.1",
+    "expo-image-manipulator": "~9.2.2",
+    "expo-linear-gradient": "~9.2.0",
     "expo-linking": "~2.3.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
+    "graphql": "^15.5.1",
+    "iamport-react-native": "^2.0.0-rc.0",
+    "qrcode": "^1.4.4",
     "react": "16.13.1",
+    "react-content-loader": "^6.0.3",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-reanimated": "~2.2.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-pager-view": "^5.0.12",
+    "react-native-qrcode-svg": "^6.1.1",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.13.0",
+    "styled-components": "^5.3.0",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-snap-carousel": "^3.8.4",
+    "@types/styled-components-react-native": "^5.1.1",
     "jest-expo": "~41.0.0-beta.0",
     "typescript": "~4.0.0"
   },
