--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@apollo/client": "^3.4.7",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "axios": "^0.22.0",
+    "density-clustering": "^1.3.0",
     "expo": "~42.0.1",
     "expo-asset": "~8.3.2",
     "expo-av": "~9.2.3",
@@ -30,8 +33,10 @@
     "expo-file-system": "~11.1.3",
     "expo-font": "~9.2.1",
     "expo-image-manipulator": "~9.2.2",
+    "expo-image-picker": "~10.2.2",
     "expo-linear-gradient": "~9.2.0",
     "expo-linking": "~2.3.1",
+    "expo-location": "~12.1.2",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
@@ -42,10 +47,13 @@
     "react-content-loader": "^6.0.3",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-date-picker": "^4.1.0",
+    "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "0.28.0",
+    "react-native-modal-datetime-picker": "^12.0.0",
     "react-native-pager-view": "^5.0.12",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "~2.2.0",
@@ -61,6 +69,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/density-clustering": "^1.3.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-native-snap-carousel": "^3.8.4",
