ADD newmessage indicator, UPDATE camera premission request on upload moment, ADD add menual, UPDATE photosize, UPDATE blank folder variable name, MOVE contants from apollo.ts to contants.ts, UPDATE imagepicker thumbnail background & no first selection

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-date-picker": "^4.1.0",
+    "react-native-fast-image": "^8.5.11",
     "react-native-flash-message": "^0.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-pan-zoom": "^2.1.12",
