--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
       "bundleIdentifier": "com.lunencorp.splace",
       "infoPlist":{
         "NSCameraUsageDescription":"모먼트를 촬영하기 위해 카메라 권한이 필요합니다.",
-        "NSMicrophoneUsageDescription":"모먼트를 촬영하기 위해 마이크 권한이 필요합니다.",
+        "NSMicrophoneUsageDescription":"모먼트를 촬영하기 위해 마이크 권한이 필요합니다. 허용하지 않을 경우, 모먼트에 소리가 녹음되지 않습니다.",
         "NSLocationWhenInUseUsageDescription":"현 위치 기반 장소 검색을 위해 위치 권한이 필요합니다.",
         "NSPhotoLibraryUsageDescription":"게시물, 사진 업로드를 위해 사진 권한이 필요합니다."
       },
