--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-linking": "~2.3.1",
     "expo-location": "~12.1.2",
     "expo-media-library": "~12.1.2",
+    "expo-notifications": "~0.12.3",
     "expo-react-native-fast-image": "^2.0.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
