--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "~5.8.10",
+    "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "~5.12.8",
     "axios": "^0.22.0",
     "density-clustering": "^1.3.0",
