--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
         "NSPhotoLibraryUsageDescription":"게시물, 사진 업로드를 위해 사진 권한이 필요합니다."
       },
       "config" : {
-        "googleMapsApiKey":"AIzaSyCw_xyuAjhlvkkLO0tICmcR6VgTDr_RiKU"
+        "googleMapsApiKey":"*****"
       }
     },
     "android": {
